# approximate-lexical

./: .gitignore  Cargo.toml  download_corpus.py  main.py  pyproject.toml  todo.txt
al-rust/: Cargo.toml
al-rust/src/: lib.rs  lsh_searcher.rs  main.rs  weighted_minhash.rs
src/: approximate_sample_searcher.rs  compression.rs  global_index.rs  kmeans.rs  lib.rs  lsh_searcher.rs  main.rs  random_proj.rs  sample_searcher.rs  sparse_to_dense.rs  term_index.rs  utils.rs  weighted_lsh_searcher.rs  weighted_minhash.rs
