[package]
name = "approximate-lexical"
version = "0.1.0"
edition = "2021"

[lib]
name = "approximate_lexical"
crate-type = ["cdylib"]

[dependencies]
bitvec_simd = "0.20.5"
ndarray = { version = "0.16.1", features = ["serde"] }
# pyo3 = "0.25.0"
rand = "0.9.2"
rand_distr = "0.5.1"
indicatif = "0.7"
rayon = "1.10.0"
distances = "1.8.0"
ordered-float = { version = "5.0.0", features = ["serde"] }
bm25 = { version = "2.3.1", features = ["parallelism"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.142"
clap = { version = "4.5.45", features = ["derive"] }

[profile.dev]
opt-level = 1