[project]
name = "approximate-lexical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.2.13",
    "matplotlib>=3.10.5",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]
features = ["pyo3/extension-module"]
